[Misc] Add --cache to eslint

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -68,4 +68,7 @@
     "coverage.cobertura.xml"
   ],
   "coverage-gutters.coverageBaseDir": "*",
+  "eslint.options": {
+    "cache": true,
+  },
 }
