--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint-plugin-n": "^15.6.1",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.32.1",
+    "eslint-plugin-unused-imports": "^2.0.0",
     "nodeman": "^1.1.2",
     "prettier": "^2.7.1",
     "typescript": "^4.9.4"
