--- a/graphql-service/apollo/package.json
+++ b/graphql-service/apollo/package.json
@@ -22,6 +22,7 @@
         "@apollo/server": "^4.3.1",
         "@as-integrations/aws-lambda": "^2.0.0",
         "@aws-sdk/client-dynamodb": "^3.258.0",
+        "@aws-sdk/client-rds-data": "^3.335.0",
         "@aws-sdk/client-sqs": "^3.272.0",
         "@aws-sdk/util-dynamodb": "^3.288.0",
         "@aws/dynamodb-data-mapper": "^0.7.3",
@@ -36,6 +37,7 @@
         "graphql": "^16.6.0",
         "graphql-scalars": "^1.20.1",
         "jsonwebtoken": "^9.0.0",
+        "node-fetch": "^3.3.1",
         "object-hash": "^3.0.0",
         "uuid": "^9.0.0"
     },
