--- a/graphql-service/package.json
+++ b/graphql-service/package.json
@@ -16,7 +16,5 @@
     },
     "author": "",
     "license": "ISC",
-    "dependencies": {
-        "node-fetch": "^3.3.1"
-    }
+    "dependencies": {}
 }
