--- a/search-service/codegen.yml
+++ b/search-service/codegen.yml
@@ -1,8 +1,8 @@
 # This configuration file tells GraphQL Code Generator how
 # to generate types based on our schema.
-documents:
-  - "./handlers/**/*.ts"
-  - "./utils/**/*.ts"
+# documents:
+#   - "./handlers/**/*.ts"
+#   - "./utils/**/*.ts"
 schema: "../graphql-service/apollo/schema/App.graphql"
 generates:
   # Specify where our generated types should live.
