[Docs] Move cli docs url

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -5,6 +5,7 @@ on:
       - "releases/**"
       - "deploy/no-test/**"
       - "deploy/amplify"
+      - "deploy/docs"
 
 permissions:
   id-token: write
