--- a/react/docs/package.json
+++ b/react/docs/package.json
@@ -15,15 +15,17 @@
         "typecheck": "tsc"
     },
     "dependencies": {
-        "@docusaurus/core": "2.3.1",
-        "@docusaurus/preset-classic": "2.3.1",
+        "@docusaurus/core": "^2.3.1",
+        "@docusaurus/preset-classic": "^2.3.1",
+        "@fontsource/roboto": "^5.0.1",
+        "@fontsource/ubuntu": "^5.0.1",
         "@mdx-js/react": "^1.6.22",
         "clsx": "^1.2.1",
         "docusaurus-plugin-sass": "^0.2.3",
         "prism-react-renderer": "^1.3.5",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
-        "sass": "^1.59.2"
+        "sass": "^1.62.1"
     },
     "devDependencies": {
         "@docusaurus/module-type-aliases": "2.3.1",
