--- a/graphql-service/samconfig.toml
+++ b/graphql-service/samconfig.toml
@@ -6,6 +6,6 @@ stack_name = "graphql-service"
 s3_bucket = "aws-sam-cli-managed-default-samclisourcebucket-ku0vhjb0ewl6"
 s3_prefix = "graphql-service"
 region = "us-east-1"
-capabilities = "CAPABILITY_IAM CAPABILITY_NAMED_IAM"
+capabilities = "CAPABILITY_IAM CAPABILITY_NAMED_IAM CAPABILITY_AUTO_EXPAND"
 parameter_overrides = "Stage=\"DEV\""
 image_repositories = []
