--- a/cli/pyproject.toml
+++ b/cli/pyproject.toml
@@ -1,12 +1,13 @@
 [tool.poetry]
 name = "fastchargeapi-cli"
-version = "0.0.2"
+version = "1.0.4"
 description = "Official CLI for managing apps and account on FastchargeAPI.com"
 authors = ["FastchargeAPI <fastchargeapi@gmail.com>"]
 license = "GNU v3.0"
 homepage = "https://fastchargeapi.com"
 repository = "https://github.com/FastchargeAPI/fastchargeapi-cli"
 packages = [{include = "fastchargeapi_cli"}]
+include = ["fastchargeapi_cli/__generated__/*"]
 
 [tool.poetry.dependencies]
 python = "^3.9"
@@ -22,6 +23,9 @@ flask-cors = "^3.0.10"
 python-jose = {extras = ["cryptography"], version = "^3.3.0"}
 tomli = "^2.0.1"
 pyjwt = {extras = ["crypto"], version = "^2.6.0"}
+pydantic = "^1.10.8"
+boto3 = "^1.26.144"
+packaging = "^23.1"
 
 [tool.poetry.scripts]
 fastcharge = 'fastchargeapi_cli.main:fastcharge'
@@ -47,4 +51,9 @@ build-backend = "poetry.core.masonry.api"
 [tool.coverage.run]
 omit = [
     "fastchargeapi_cli/config.py",
+]
+
+[tool.blix.data]
+data_files = [
+    { destination = "./", from = [ "pyproject.toml" ] },
 ]
